--- a/src/App.css
+++ b/src/App.css
@@ -44,3 +44,19 @@
         visibility: hidden;
     }
 }
+
+.arrow {
+    position: fixed;
+    z-index: 30;
+    bottom: 50px;
+    right: 50px;
+
+    font-family:
+        Apple Color Emoji,
+        'Segoe UI Emoji',
+        'Noto Color Emoji';
+    letter-spacing: 1.5px;
+    line-height: 26px;
+    font-size: x-large;
+    text-align: center;
+}
